--- a/css/main.css
+++ b/css/main.css
@@ -74,10 +74,12 @@ header {
 }
 
 header h1 {
-	float: left;
+	/*float: left;*/
 	margin: 0;
 	padding: 38px 0;
 	border-bottom: 3px solid green;
+	width: 100%;
+    text-align: center;
 }
 header h1 span {
 	color: #77a466;
@@ -116,6 +118,7 @@ main {
 	justify-content: center;
 	align-items: center;
 	flex-flow: wrap;
+	height: 100%;
 }
 
 .main-image {
@@ -148,7 +151,7 @@ main {
 }
 
 .main-title p, h3 {
-	padding: 10px 30px;
+	padding: 5px 30px;
 }
 
 .section-one,
@@ -156,20 +159,23 @@ main {
 .section-three {
 	width: 100%;
 	/*height: auto;*/
-	/*border-top: 2px solid #eee;*/
+	border-top: 2px solid #eee;
 	background-color: fuchsia;
 	/*border-bottom: 2px solid #eee;*/
-	display: flex;
+	/*display: flex;
 	justify-content: center;
 	/*align-items: center;*//*the sections don't need it*/
-	flex-flow: wrap;
+	/*flex-flow: wrap;*/
+}
+.section-three {
+	border-bottom: 2px solid #eee;
 }
 
 .section-one h4, .section-two h4,
 .section-three h4 {
 	padding: 10px 30px;
 	width: 100%;
-	margin: 0 auto;
+	/*margin: 0 auto;*/
 	
 }
 
@@ -202,7 +208,7 @@ main {
 	font-size: 16px;
 	line-height: 21px;
 	background-color: darkslategrey;
-	width: 100%;
+	/*width: 100%;*/
 	margin: 0 auto;
 }
 
@@ -210,7 +216,7 @@ main {
 	font-size: 1em;
 	line-height: 24px;
 	background-color: dimgray;
-	width: 100%;
+	/*width: 100%;*/
 	margin: 0 auto;
 }
 
@@ -246,57 +252,55 @@ footer span {
 
 @media (min-width: 1024px) {
 	
+	.container{
+		font-size: 1.15em;
+	}
 	
 	.section-one,.section-two,.section-three {
 	/*height: auto;
-	border-top: 2px solid #eee;
 	background-color: fuchsia;
-	border-bottom: 2px solid #eee;
 	display: flex;
 	justify-content: center;
 	align-items: center; /*in this case center aligning is a problem*/
 	/*flex-flow: wrap;*/
+	border-bottom: 2px solid #eee;
+	border-top: 2px solid #eee;
 	flex: 1 30%;
 	min-height: 250px;
 	border: none;
+	}
+	.section-two {
+		border-left: 1px solid #eee;
+		border-right: 1px solid #eee;
+		}
+
+	/*header nav {
+    	font-size: 1.5em;
+	}*/
 }
 	
+
+@media (min-width: 1200px) {
 	
-	/*
-	#div-1,
-    #div-2{
-        /* set your flex value to 1 50% */
-       /* flex: 1 45%;
-        min-height: 350px; /*to stop the boxes from changing shape*/
-       /* border-bottom: 1px dashed black;
-    }
-    #div-1 {
-        border-right: 1px dashed black;
-    }
+	header nav ul li {	
+		display: inline;
+		/*flex: 1 60%;*/
+	}
+	header nav {
+		flex: 1 60%;
+	}
+	header h1 {	
+		display: inline;
+		flex: 1 30%;
+		border-bottom: none;
+	}
+	header {
+		flex-flow: nowrap;
+		border-bottom: none;
+	}
+	.main-image img {
+		/*width: 100%;*/
+		border-top: 3px solid #77a466;
+	}
+}
 
-    #div-3 {
-      /* set your flex value to 1 100% */
-   /*   flex: 1 100%;
-    }
-  }*/
-
-  @media (min-width: 1200px) {
-    .flex-container {
-        max-width: 2000px;
-    }
-    #div-1,
-    #div-2,
-    #div-3{
-        /* set your flex value to 1 50% */
-        flex: 1 25%;
-        min-height: 380px; /*to stop the boxes from changing shape*/
-    }
-
-    #div-1,
-    #div-2{
-        border-right: 1px dashed black;
-        border-bottom: none;
-    }
-
-   
-  }
